CSP header added

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 ---
 ---
+Content-Security-Policy: upgrade-insecure-requests
 
 <!DOCTYPE html>
 <html class="">
 <head>
   <meta charset="UTF-8">
   <!-- Upgrading Insecure Requests (http - https)  -->
-  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+  <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="{{ site.data.settings.seo.description }}">
