--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 ---
-Content-Security-Policy: upgrade-insecure-requests
+<!-- Content-Security-Policy: upgrade-insecure-requests -->
 
 <!DOCTYPE html>
 <html class="">
@@ -8,6 +8,7 @@ Content-Security-Policy: upgrade-insecure-requests
   <meta charset="UTF-8">
   <!-- Upgrading Insecure Requests (http - https)  -->
   <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
+  <meta http-equiv="Content-Security-Policy" content="block-all-mixed-content">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="{{ site.data.settings.seo.description }}">
