--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <head>
   <meta charset="UTF-8">
   <!-- Upgrading Insecure Requests (http - https)  -->
-  <meta http-equiv="Content-Security-Policy" content="default-src">
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src"> -->
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'unsafe-inline' 'unsafe-eval'">
   <!-- <meta http-equiv="Content-Security-Policy" content="block-all-mixed-content"> -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="viewport" content="width=device-width, initial-scale=1">
