--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- Upgrading Insecure Requests (http - https)  -->
   <!-- <meta http-equiv="Content-Security-Policy" content="default-src"> -->
   <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' http://crikeli.github.io"> -->
-  <meta http-equiv="X-Content-Security-Policy" content="default-src 'self' http://fonts.googleapis.com http://ajax.googleapis.com http://crikeli.github.io ; script-src 'self' http://fonts.googleapis.com http://ajax.googleapis.com; style-src 'self' http://fonts.googleapis.com; img-src 'self' ; font-src 'self' http://fonts.googleapis.com; connect-src 'self' http://ajax.googleapis.com; media-src 'self' ; object-src 'self' ; child-src 'self' ; frame-ancestors 'self' ; form-action 'none' ; sandbox allow-same-origin allow-scripts allow-pointer-lock; reflected-xss block;" />
+  <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js https://crikeli.github.io/" />
   <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'"> -->
   <!-- <meta http-equiv="Content-Security-Policy" content="block-all-mixed-content"> -->
   <meta name="apple-mobile-web-app-capable" content="yes">
