--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- Upgrading Insecure Requests (http - https)  -->
   <!-- <meta http-equiv="Content-Security-Policy" content="default-src"> -->
   <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' http://crikeli.github.io"> -->
-  <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js https://crikeli.github.io/assets/img/ http://crikeli.github.io/work/proj-1/ http://crikeli.github.io/work/proj-2/ http://crikeli.github.io/work/proj-3/ http://crikeli.github.io/work/proj-4/" />
+  <meta http-equiv="Content-Security-Policy" content="script-src 'self' http://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js http://crikeli.github.io/assets/img/ http://crikeli.github.io/work/proj-1/ http://crikeli.github.io/work/proj-2/ http://crikeli.github.io/work/proj-3/ http://crikeli.github.io/work/proj-4/" />
   <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'"> -->
   <!-- <meta http-equiv="Content-Security-Policy" content="block-all-mixed-content"> -->
   <meta name="apple-mobile-web-app-capable" content="yes">
