updated content-security-policy for crikeli.github.io

--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 ---
 ---
+<!-- Content-Security-Policy: upgrade-insecure-requests -->
 
 <!DOCTYPE html>
 <html class="">
 <head>
   <meta charset="UTF-8">
+  <!-- Upgrading Insecure Requests (http - https)  -->
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src"> -->
+  <meta http-equiv="Content-Security-Policy" content="connect-src http://crikeli.github.io">
+  <!-- <meta http-equiv="Content-Security-Policy" content="script-src 'self' http://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js http://crikeli.github.io/assets/img/ https://crikeli.github.io/work/proj-1/ https://crikeli.github.io/work/proj-2/ https://crikeli.github.io/work/proj-3/ https://crikeli.github.io/work/proj-4/" /> -->
+  <!-- <meta http-equiv="X-Content-Security-Policy" content="default-src 'self' http://fonts.googleapis.com http://ajax.googleapis.com http://crikeli.github.io; script-src 'self' http://fonts.googleapis.com http://ajax.googleapis.com ; style-src 'self' http://fonts.googleapis.com; img-src 'self' ; font-src 'self' http://fonts.googleapis.com; connect-src 'self' http://ajax.googleapis.com; media-src 'self' ; object-src 'self' ; child-src 'self' ; frame-ancestors 'self' ; form-action 'none' ; sandbox allow-same-origin allow-scripts allow-pointer-lock; reflected-xss block;" /> -->
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'"> -->
+  <!-- <meta http-equiv="Content-Security-Policy" content="block-all-mixed-content"> -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="{{ site.data.settings.seo.description }}">
