--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- <meta http-equiv="Content-Security-Policy" content="default-src"> -->
   <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' ; connect-src 'self'"> -->
   <!-- <meta http-equiv="Content-Security-Policy" content="script-src 'self' http://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js http://crikeli.github.io/assets/img/ https://crikeli.github.io/work/proj-1/ https://crikeli.github.io/work/proj-2/ https://crikeli.github.io/work/proj-3/ https://crikeli.github.io/work/proj-4/" /> -->
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self' http://ajax.googleapis.com http://crikeli.github.io; script-src 'self' unsafe-inline ; style-src 'self' unsafe-inline ; img-src 'self' ; font-src 'self'  ; connect-src 'self'; media-src 'self' ; object-src 'self' ; child-src 'self' ; form-action 'none' ; reflected-xss block;" />
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self' http://ajax.googleapis.com http://crikeli.github.io; script-src 'self' unsafe-inline ; style-src 'self' unsafe-inline ; img-src 'self' ; font-src 'self' ":data"  ; connect-src 'self'; media-src 'self' ; object-src 'self' ; child-src 'self' ; form-action 'none' ; reflected-xss block;" />
   <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'"> -->
   <!-- <meta http-equiv="Content-Security-Policy" content="block-all-mixed-content"> -->
   <meta name="apple-mobile-web-app-capable" content="yes">
