--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta http-equiv="Content-Security-Policy" content="connect-src 'self' http://crikeli.github.io/work/proj-2/">
+  <meta http-equiv="Content-Security-Policy" content="connect-src 'self' https://crikeli.github.io/work/proj-2/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="{{ site.data.settings.seo.description }}">
   <meta rel="author" href="{{ site.data.settings.seo.rel-author }}">
