--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 {% include footer.html %}
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="assets/js/functions.js"></script>
 </body>
 </html>
