Removed analytics support which might be a factor for preventing mixed content loading

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <html class="">
 <head>
   <meta charset="UTF-8">
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'unsafe-inline' 'unsafe-eval'"> -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="{{ site.data.settings.seo.description }}">
@@ -16,7 +17,7 @@
   <link rel="stylesheet" href="assets/css/all.css">
   <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 
-  {% include analytics.html %}
+  <!-- {% include analytics.html %} -->
 </head>
 <body>
 
