--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <html class="">
 <head>
   <meta charset="UTF-8">
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'unsafe-inline' 'unsafe-eval'"> -->
+  <meta http-equiv="Content-Security-Policy" content="connect-src http://crikeli.github.io/work/proj-4 http://crikeli.github.io/work/proj-3 http://crikeli.github.io/work/proj-2 http://crikeli.github.io/work/proj-1; script-src *">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="{{ site.data.settings.seo.description }}">
