--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
 {% include footer.html %}
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script src="assets/js/functions.js"></script>
+<script src="assets/js/functions.js" crossorigin="anonymous"></script>
 </body>
 </html>
