added {{ site.github.url }} to route correctly

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <title>{{ site.data.settings.title }}</title>
 
-  <link rel="stylesheet" href="assets/css/all.css">
+  <link rel="stylesheet" href="{{ site.github.url }}/assets/css/all.css">
   <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 
   <!-- {% include analytics.html %} -->
@@ -34,6 +34,6 @@
 {% include footer.html %}
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script src="assets/js/functions.js" crossorigin="anonymous"></script>
+<script src="{{ site.github.url }}/assets/js/functions.js"></script>
 </body>
 </html>
