--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="{{ site.github.url }}/assets/css/all.css">
   <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 
-  <!-- {% include analytics.html %} -->
+  {% include analytics.html %}
 </head>
 <body>
 
