--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 
 {% include footer.html %}
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> -->
 <script src="{{ site.github.url }}/assets/js/functions.js"></script>
 </body>
 </html>
