--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
   <meta name="description" content="{{ site.data.settings.seo.description }}">
   <meta rel="author" href="{{ site.data.settings.seo.rel-author }}">
   <meta rel="publisher" href="{{ site.data.settings.seo.rel-publisher }}">
-
   <title>{{ site.data.settings.title }}</title>
-
-  <link rel="stylesheet" href="{{ site.github.url }}/assets/css/all.css">
+  <link rel="stylesheet" href="{{ site.github.url }}/assets/css/style.css">
 </head>
 <body>
 
